--- a/pom.xml
+++ b/pom.xml
@@ -35,14 +35,31 @@
 
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-resteasy-reactive-jackson</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>io.quarkus</groupId>
             <artifactId>quarkus-junit5</artifactId>
             <scope>test</scope>
         </dependency>
+        <!-- Cosas para el H2 -->
+	    <dependency>
+	        <groupId>io.quarkus</groupId>
+	        <artifactId>quarkus-hibernate-orm</artifactId>
+	    </dependency>
+	    <dependency>
+	        <groupId>io.quarkus</groupId>
+	        <artifactId>quarkus-jdbc-h2</artifactId>
+	    </dependency>
+	    
+	    <!-- JSON  -->
+	    <dependency>
+	        <groupId>io.quarkus</groupId>
+	        <artifactId>quarkus-resteasy-reactive-jackson</artifactId>
+	    </dependency>
+	    
+	    <dependency>
+	        <groupId>org.projectlombok</groupId>
+	        <artifactId>lombok</artifactId>
+	        <version>1.18.30</version>
+	        <scope>provided</scope>
+	    </dependency>
     </dependencies>
 
     <build>
@@ -63,5 +80,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
