--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,83 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.softtek.crudpruebas</groupId>
-  <artifactId>com.softtek.crudclientes</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <dependencies>
-	<dependency>
-	    <groupId>io.quarkus</groupId>
-	    <artifactId>quarkus-resteasy</artifactId>
-	    <version>3.28.0</version>
-	</dependency>
-   </dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
+
+    <groupId>com.imalex28.crudpruebas</groupId>
+    <artifactId>crudclientes</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+
+    <properties>
+        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
+        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
+        <quarkus.platform.version>3.8.5</quarkus.platform.version>
+        <maven.compiler.release>17</maven.compiler.release>
+    </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>${quarkus.platform.group-id}</groupId>
+                <artifactId>${quarkus.platform.artifact-id}</artifactId>
+                <version>${quarkus.platform.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-resteasy-reactive</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-junit5</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!-- Cosas para el H2 -->
+	    <dependency>
+	        <groupId>io.quarkus</groupId>
+	        <artifactId>quarkus-hibernate-orm</artifactId>
+	    </dependency>
+	    <dependency>
+	        <groupId>io.quarkus</groupId>
+	        <artifactId>quarkus-jdbc-h2</artifactId>
+	    </dependency>
+	    
+	    <!-- JSON  -->
+	    <dependency>
+	        <groupId>io.quarkus</groupId>
+	        <artifactId>quarkus-resteasy-reactive-jackson</artifactId>
+	    </dependency>
+	    
+	    <dependency>
+	        <groupId>org.projectlombok</groupId>
+	        <artifactId>lombok</artifactId>
+	        <version>1.18.30</version>
+	        <scope>provided</scope>
+	    </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-maven-plugin</artifactId>
+                <version>${quarkus.platform.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>build</goal>
+                            <goal>generate-code</goal>
+                            <goal>generate-code-tests</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
