--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,21 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy-reactive</artifactId>
     </dependency>
+    
+    <!-- REST Client -->
+	<dependency>
+	    <groupId>io.quarkus</groupId>
+	    <artifactId>quarkus-rest-client-reactive</artifactId>
+	</dependency>
+	
+	<!-- REST Client Deserialize JSON-->
+	<dependency>
+	  <groupId>io.quarkus</groupId>
+	  <artifactId>quarkus-rest-client-reactive-jackson</artifactId>
+	</dependency>
 
-    <!-- Quarkus + JUnit5 -->
+	
+	<!-- Junit5 -->
     <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
@@ -87,7 +100,12 @@
 	  <artifactId>quarkus-jacoco</artifactId>
 	  <scope>test</scope>
 	</dependency>
-
+	<!-- Acceptance Tests -->
+	<dependency>
+	  <groupId>io.rest-assured</groupId>
+	  <artifactId>rest-assured</artifactId>
+	  <scope>test</scope>
+	</dependency>
   </dependencies>
 
   <build>
