--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
 	  <artifactId>quarkus-rest-client-reactive-jackson</artifactId>
 	</dependency>
 
+	<!-- REDIS Client-->
+	<dependency>
+	  <groupId>io.quarkus</groupId>
+	  <artifactId>quarkus-redis-client</artifactId>
+	</dependency>
 	
 	<!-- Junit5 -->
     <dependency>
